--- a/store/blocks/desktop/components/home/header/main_header.jsonc
+++ b/store/blocks/desktop/components/home/header/main_header.jsonc
@@ -1,4 +1,8 @@
 {
+  "sticky-layout#desktop__main-menu": {
+    "children": ["header-row#desktop__main-menu"]
+  },
+
   "header-row#desktop__main-menu": {
     "title": "header main menu",
     "children": ["flex-layout.row#desktop-section-one-main-information"],
@@ -14,6 +18,7 @@
       "verticalAlign": "center",
       "preventHorizontalStretch": true,
       "preventVerticalStretch": true,
+      "colJustify": "between",
       "fullWidth": true,
       "blockClass": "header-container-menu-desktop-section-one"
     },
