--- a/store/blocks/desktop/components/home/header/main-header-icon.jsonc
+++ b/store/blocks/desktop/components/home/header/main-header-icon.jsonc
@@ -1,8 +1,6 @@
 {
-    "flex-layout.row#desktop_main-header-icons": {
-        "title": "container menu header icons",
-        "children": [
-            "header-row#global__menu-icon"
-        ]
-    }
+  "flex-layout.row#desktop_main-header-icons": {
+    "title": "container menu header icons",
+    "children": ["header-row#global__menu-icon"]
+  }
 }
