--- a/store/blocks/mobile/components/home/header/main_mega-menu.jsonc
+++ b/store/blocks/mobile/components/home/header/main_mega-menu.jsonc
@@ -1,5 +1,5 @@
 {
-  "drawer": {
+  "drawer#prueba": {
     "title": "Mobile Drawer",
     "children": ["mega-menu#mobile"],
     "blocks": ["drawer-header#my-drawer"]
