fix: adjust minicart and PLP for tablet and mobile responsiveness

--- a/store/blocks/global/components/logo/logo.jsonc
+++ b/store/blocks/global/components/logo/logo.jsonc
@@ -2,7 +2,8 @@
   "flex-layout.col#global__logo-desktop": {
     "title": "container logo desktop",
     "props": {
-      "verticalAlign": "middle"
+      "verticalAlign": "middle",
+      "width": "grow"
     },
     "children": ["logo#desktop"]
   },
