--- a/store/blocks/global/components/minicart/minicart.jsonc
+++ b/store/blocks/global/components/minicart/minicart.jsonc
@@ -17,7 +17,7 @@
     "props": {
       "blockClass": "mini-cart-logo-header-row"
     },
-    "children": ["flex-layout.col#global__logo-desktop"]
+    "children": ["flex-layout.col#global__logo"]
   },
   "flex-layout.row#minicart-header": {
     "title": "Minicart Header Row",
