--- a/store/blocks/mobile/components/home/header/main_header-info.jsonc
+++ b/store/blocks/mobile/components/home/header/main_header-info.jsonc
@@ -18,7 +18,7 @@
   },
   "flex-layout.col#mobile__container--menu--logo": {
     "title": "Container menu and logo",
-    "children": ["drawer#prueba", "flex-layout.col#global__logo-desktop"],
+    "children": ["drawer#mobile", "flex-layout.col#global__logo"],
     "props": {
       "blockClass": ["container__menu--logo"],
       "colSizing": "auto"
