--- a/store/blocks/mobile/components/home/header/main_mega-menu.jsonc
+++ b/store/blocks/mobile/components/home/header/main_mega-menu.jsonc
@@ -1,5 +1,5 @@
 {
-  "drawer#prueba": {
+  "drawer#mobile": {
     "title": "Mobile Drawer",
     "children": ["mega-menu#mobile"],
     "blocks": ["drawer-header#my-drawer"]
@@ -19,7 +19,7 @@
   "flex-layout.row#drawer-header": {
     "title": "Drawer Header Row",
     "children": [
-      "flex-layout.col#global__logo-desktop",
+      "flex-layout.col#global__logo",
       "rich-text#mobile__header--options--mega--menu",
       "flex-layout.col#spacer"
     ],
