fix: adjust login styles for mobile and desktop, remove commented code, add button to empty shopping cart

--- a/store/blocks/desktop/components/home/rich_text/main_rich-text.jsonc
+++ b/store/blocks/desktop/components/home/rich_text/main_rich-text.jsonc
@@ -2,7 +2,7 @@
   "rich-text#desktop__title-section-one": {
     "title": "texto section one desktop",
     "props": {
-      "text": "An amazing product  DESKTOP",
+      "text": "An amazing product",
       "textAlignment": "LEFT",
       "textPosition": "LEFT",
       "font": "t-heading-10",
