--- a/store/blocks/global/screen/home.jsonc
+++ b/store/blocks/global/screen/home.jsonc
@@ -3,8 +3,8 @@
     "blocks": [
       "responsive-layout.phone",
       "responsive-layout.desktop",
-      "responsive-layout.tablet",
-      "modal-trigger#example"      
+      "responsive-layout.tablet"
+      // "modal-trigger#example"      
     ]
   }
 }
