--- a/store/blocks/mobile/components/home/header/main_mega-menu.jsonc
+++ b/store/blocks/mobile/components/home/header/main_mega-menu.jsonc
@@ -9,7 +9,8 @@
     "props": {
       "defaultDepartmentActive": "...",
       "orientation": "vertical",
-      "openOnly": "vertical"
+      "openOnly": "vertical",
+        "title": "ITGlobers+"
     }
   },
   "drawer-header#my-drawer": {
@@ -20,7 +21,6 @@
     "title": "Drawer Header Row",
     "children": [
       "flex-layout.col#global__logo",
-      "rich-text#mobile__header--options--mega--menu",
       "flex-layout.col#spacer"
     ],
     "props": {
@@ -29,13 +29,6 @@
       "preventVerticalStretch": true,
       "preserveLayoutOnMobile": true,
       "fullWidth": true
-    }
-  },
-  "rich-text#mobile__header--options--mega--menu": {
-    "title": "header options mega menu mobile",
-    "props": {
-      "text": "ITGlobers+",
-      "blockClass": "header__options--mega--menu--mobile"
     }
   },
   "flex-layout.col#spacer": {
