--- a/manifest.json
+++ b/manifest.json
@@ -57,7 +57,8 @@
     "vtex.disclosure-layout": "1.x",
     "vtex.search": "2.x",
     "vtex.product-specifications": "1.x",
-    "vtex.shelf": "1.x"
+    "vtex.shelf": "1.x",
+    "itgloberspartnercl.whatsapp-button": "0.x"
   },
   "peerDependencies": {
     "vtex.wish-list": "1.x",
